--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
+{% block 'title'%}
+{{ title }}
+{% endblock %}
 {% block content %}
 <div class="container py-5">
-  <h1>Лев Толстой – зеркало русской революции.</h1>
+  <h1>{{ text }}</h1>
   <p>
     Группа тайных поклонников графа.
   </p>
