--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
+{% block 'title'%}
+{{ title }}
+{% endblock %}
 {% block content %}
 <div class="container py-5">     
-  <h1>Последние обновления на сайте</h1>
+  <h1>{{ text }}</h1>
   <article>
     <ul>
       <li>
