--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -8,6 +8,9 @@
   {% for post in posts %}
   <ul>
     <li>
+      Группа: {{post.group}}
+    </li>
+    <li>
       Автор: {{ post.author.get_full_name }}
     </li>
     <li>
@@ -15,8 +18,10 @@
     </li>
   </ul>
   <p>{{ post.text }}</p>    
-  <a href="">все записи группы</a>
+  {% if post.group %}   
+  <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
+  {% endif %} 
   {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
-     
+</div>  
 {% endblock %}
